<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settingsbg"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorsettingtoolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="#FFFFFF" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="215dp"
        android:layout_height="215dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="87dp"
        android:src="@drawable/icon_user"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="330dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/display_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FEFFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="sans"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="270dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/just_send_me_a_voice_note"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/settings_image_btn"
        style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/rounded_cornerwhite"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/change_image"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/settings_status_btn"
        style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/rounded_cornerwhite"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/change_status"
        android:textSize="15sp"
        android:textStyle="bold" />



</RelativeLayout>